update functionality, memory management

--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,7 @@ services:
       echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list
       apt-get update
       apt-get install -y google-chrome-stable
-    startCommand: gunicorn app:app
+    startCommand: gunicorn app:app --workers=1 --threads=2 --timeout=120
     runtime: python
     region: oregon
     plan: free
